@@ -81,6 +81,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1560] counts of data objects under collections skewed by replicas
 **Added counts of files and counts of collections methods to CollectionAndDataObjectListAndSearchAO.  Made queries able to ignore replicas in the counts.
 
+*[#1317] fix trim statements in irodsfileImpl
+**Remove any trim() statements from iRODS absolute paths to not assume that spaces are never embedded
 
 ==Features==
 
